--- a/src/components/table/TDTable.css
+++ b/src/components/table/TDTable.css
@@ -2,15 +2,6 @@
     @apply right-0;
 }
 
-.resizer::after {
-    @apply content-[''] absolute z-[1] w-[1px] h-full bg-base-content cursor-col-resize right-[-1px];
-}
-
-.resizer::before {
-    @apply content-[''] absolute z-10 w-[7.2px] h-[7.2px] bg-base-content cursor-col-resize right-[-3.18px] top-1/2 translate-y-[-50%] rotate-45;
-
-}
-
 .resizer.rtl {
     @apply left-0;
 }
@@ -19,9 +10,8 @@
     @apply bg-primary opacity-100;
 }
 
-.resizer.isResizing::after,
-.resizer.isResizing::before {
-    @apply bg-primary;
+.resizer::before {
+    @apply content-[''] absolute w-2 h-full cursor-col-resize right-1;
 }
 
 .resizer {
